[package]
name                    = "subtle-ng-derive"
description             = "Derive macros for subtle-ng traits."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "BSD-3-Clause"
repository              = "https://github.com/cosmicexplorer/subtle-ng-derive"
version                 = "0.0.4"
documentation           = "https://docs.rs/subtle-ng-derive"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro              = true

[features]
default                 = []
with-ng                 = []

[dependencies]
proc-macro2             = "1"
quote                   = "1"
syn                     = { version = "1", features = ["full"] }

[dev-dependencies]
subtle = { package = "subtle-ng", git = "https://github.com/cosmicexplorer/subtle", rev = "f87325727974bbd62b85fcac162248771262ff1d" }
