[package]
name                    = "subtle-ng-derive"
description             = "Derive macros for subtle-ng traits."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "BSD-3-Clause"
repository              = "https://github.com/cosmicexplorer/subtle-ng-derive"
version                 = "0.0.5"
documentation           = "https://docs.rs/subtle-ng-derive"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro              = true

[features]
default                 = []
with-ng                 = []

[dependencies]
proc-macro2             = "1"
quote                   = "1"
syn                     = { version = "1", features = ["full"] }

[dev-dependencies]
subtle = { package = "subtle-ng", git = "https://github.com/cosmicexplorer/subtle", rev = "287f4ead34b0cdd4185083bdd0cd37a38b0954a4" }
