[package]
name                    = "subtle-derive"
description             = "Derive macros for subtle traits."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "BSD-3-Clause"
repository              = "https://github.com/cosmicexplorer/subtle-derive"
version                 = "0.0.5"
documentation           = "https://docs.rs/subtle-derive"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro              = true

[features]
default                 = []

[dependencies]
proc-macro2             = "1"
quote                   = "1"
syn                     = { version = "1", features = ["full"] }

[dev-dependencies]
subtle = { package = "subtle", git = "https://github.com/cosmicexplorer/subtle", rev = "d38c054ca6e17caac41c780d66879b3453e00e47" }
